--- a/project/generic.html
+++ b/project/generic.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic - Phantom by HTML5 UP</title>
+		<title>About | Petros Demetriou</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Phantom</span>
+									<span class="symbol"><img src="images/codelogo.png" alt="" /></span><span class="title">About</span>
 								</a>
 
 							<!-- Nav -->
@@ -40,10 +40,9 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Ipsum veroeros</a></li>
-							<li><a href="generic.html">Tempus etiam</a></li>
-							<li><a href="generic.html">Consequat dolor</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="generic.html">About</a></li>
+							<li><a href="generic.html">Work</a></li>
+							<li><a href="elements.html">Contact</a></li>
 						</ul>
 					</nav>
 
@@ -83,14 +82,14 @@
 							<section>
 								<h2>Follow</h2>
 								<ul class="icons">
-									<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-500px"><span class="label">500px</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+									<li><a href="https://twitter.com/p_demetriou" class="icon brands style2 fa-twitter" target="blank"><span class="label">Twitter</span></a></li>
+									<li><a href="https://www.facebook.com/petros.demetriou.5" class="icon brands style2 fa-facebook-f" target="blank"><span class="label">Facebook</span></a></li>
+									<li><a href="https://www.instagram.com/petros_demetriu/" class="icon brands style2 fa-instagram" target="blank"><span class="label">Instagram</span></a></li>
+									<li><a href="https://dribbble.com/dimitriupe" class="icon brands style2 fa-dribbble" target="blank"><span class="label">Dribbble</span></a></li>
+									<li><a href="https://github.com/dimitriupe" class="icon brands style2 fa-github" target="blank"><span class="label">GitHub</span></a></li>
+									<li><a href="https://500px.com/dimitriupe" class="icon brands style2 fa-500px" target="blank"><span class="label">500px</span></a></li>
+									<li><a href="0035799340070" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
+									<li><a href="dimitriupe@gmail.com" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
 								</ul>
 							</section>
 							<ul class="copyright">
