--- a/project/index.html
+++ b/project/index.html
@@ -57,12 +57,12 @@
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/pic01.jpg" alt="Pink Image for Link" />
 									</span>
-									<a href="generic.html">
-										<h2>Magna</h2>
+									<a href="https://codepen.io/p_demetriou/pen/eYYEjJR" target="blank">
+										<h2>Sweet Eats Bakery<br>User Interface I: HTML Markup</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>One of my first projects at Λ.<br>Pretty simple HTML markup.</p>
 										</div>
 									</a>
 								</article>
@@ -70,10 +70,10 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Lorem</h2>
+									<a href="https://codepen.io/p_demetriou/pen/YzzEXjE" target="blank">
+										<h2>CSS + HTML Practice<br>Learning how to code</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Combination of HTML and CSS.<br>Practice makes perfect.<br>Still long way to go.</p>
 										</div>
 									</a>
 								</article>
@@ -81,10 +81,10 @@
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Feugiat</h2>
+									<a href="https://codepen.io/p_demetriou/pen/vYYJavY">
+										<h2>Sweet Eats Bakery<br>User Interface I: HTML Markup + CSS</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Same project as the first one.<br>Slightly more beautiful &#128527;</p>
 										</div>
 									</a>
 								</article>
@@ -216,18 +216,18 @@
 							<section>
 								<h2>Follow</h2>
 								<ul class="icons">
-									<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-500px"><span class="label">500px</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+									<li><a href="https://twitter.com/p_demetriou" class="icon brands style2 fa-twitter" target="blank"><span class="label">Twitter</span></a></li>
+									<li><a href="https://www.facebook.com/petros.demetriou.5" class="icon brands style2 fa-facebook-f" target="blank"><span class="label">Facebook</span></a></li>
+									<li><a href="https://www.instagram.com/petros_demetriu/" class="icon brands style2 fa-instagram" target="blank"><span class="label">Instagram</span></a></li>
+									<li><a href="https://dribbble.com/dimitriupe" class="icon brands style2 fa-dribbble" target="blank"><span class="label">Dribbble</span></a></li>
+									<li><a href="https://github.com/dimitriupe" class="icon brands style2 fa-github" target="blank"><span class="label">GitHub</span></a></li>
+									<li><a href="https://500px.com/dimitriupe" class="icon brands style2 fa-500px" target="blank"><span class="label">500px</span></a></li>
+									<li><a href="0035799340070" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
+									<li><a href="dimitriupe@gmail.com" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Petros Demetriou | My Portfolio. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</footer>
