Finished the Portfolio Website project

--- a/project/generic.html
+++ b/project/generic.html
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/codelogo.png" alt="" /></span><span class="title">About</span>
+									<span class="symbol"><img src="images/codelogo.png" alt="" /></span><span class="title">My Portfolio</span>
 								</a>
 
 							<!-- Nav -->
@@ -49,11 +49,13 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Generic Page</h1>
-							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel venenatis mauris vehicula hendrerit.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<h1>About</h1>
+							<span class="image main"><img src="images/cyprus.jpg" alt="Image of Cyprus sea" /></span>
+							<p>My full name is Petros Demetriou. I live in Limassol, <a href="https://www.tripadvisor.com/Attractions-g190372-Activities-c61-t52-Cyprus.html" target="blank">Cyprus</a> and as you probably noticed from the picture above we have beautiful, magical beaches.<br>Cyprus is an island located in the eastern Mediterranean Sea and has amazing places to visit.</p>
+							<p>Three weeks ago, I began my journey at Lambda School and for the next 1,5 year my aim will be to acquire as much as possible tech skills and knowledge.<br>In this way, I will be in a better position to compete for a job within the tech industry. I had minor experience of coding in the past, mainly through learning C language which I was taught at high school. Othen than that my coding experience up to now has been limited.</p>
+							<p>But I took the big decision to change this. I am really fascinated by technology and I am on my way to make the big step and switch to a tech related job. Lambda School has been really influential in providing me with the necessary skills and knowledge as required by current recruiters of the tech industry.</p>
+							<p>I am currently a PT Full Stack Web Development student at Λ.<br>I will give my best to complete the curriculum and try to reach my maximum potential as a future Web Devloper.</p>
+							<div class="profilepic"><img src="images/3.jpg" alt="Petro's profile picture" /></div>
 						</div>
 					</div>
 
