--- a/project/index.html
+++ b/project/index.html
@@ -42,7 +42,6 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="generic.html">About</a></li>
 							<li><a href="generic.html">Work</a></li>
-							<!-- <li><a href="generic.html">Consequr</a></li> -->
 							<li><a href="elements.html">Contact</a></li>
 						</ul>
 					</nav>
@@ -68,7 +67,7 @@
 								</article>
 								<article class="style2">
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/pic02.jpg" alt="Blue image for Link" />
 									</span>
 									<a href="https://codepen.io/p_demetriou/pen/YzzEXjE" target="blank">
 										<h2>CSS + HTML Practice<br>Learning how to code</h2>
@@ -79,9 +78,9 @@
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/pic03.jpg" alt="Green image for Link" />
 									</span>
-									<a href="https://codepen.io/p_demetriou/pen/vYYJavY">
+									<a href="https://codepen.io/p_demetriou/pen/vYYJavY" target="blank">
 										<h2>Sweet Eats Bakery<br>User Interface I: HTML Markup + CSS</h2>
 										<div class="content">
 											<p>Same project as the first one.<br>Slightly more beautiful &#128527;</p>
@@ -90,100 +89,100 @@
 								</article>
 								<article class="style4">
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="images/pic04.jpg" alt="Dark Purple image for Link" />
 									</span>
-									<a href="generic.html">
-										<h2>Tempus</h2>
+									<a href="https://github.com/dimitriupe/User-Interface/tree/Petros-Demetriou" target="blank">
+										<h2>User Interface Project II:<br>Great Idea<br> Web Page</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>I was given a picture of a website and<br> I had to create it from scratch.<br>Close enough.</p>
 										</div>
 									</a>
 								</article>
 								<article class="style5">
 									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
+										<img src="images/pic05.jpg" alt="Light Purple image for Link" />
 									</span>
-									<a href="generic.html">
-										<h2>Aliquam</h2>
+									<a href="https://github.com/dimitriupe/Sprint-Challenge--User-Interface/tree/Petros-Demetriou" target="blank">
+										<h2>Sprint Challenge:<br>User Interface and Git<br>Multi-Page Website</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>My first Sprint challenge at Λ.<br>I had 3 hours to complete this project.<br>DONE</p>
 										</div>
 									</a>
 								</article>
 								<article class="style6">
 									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
+										<img src="images/pic06.jpg" alt="Navy Blue Image for Link"/>
 									</span>
-									<a href="generic.html">
-										<h2>Veroeros</h2>
+									<a href="https://github.com/dimitriupe/UI-III-Flexbox/tree/Petros-Demetriou" target="blank">
+										<h2>User Interface Project III:<br>Great Idea<br> Web Page<br> With Flexbox</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>I had to revisit my Great Idea Web Page and refactor the whole CSS file by using flexbox.</p>
 										</div>
 									</a>
 								</article>
 								<article class="style2">
 									<span class="image">
-										<img src="images/pic07.jpg" alt="" />
+										<img src="images/pic07.jpg" alt="Skyblue Image for Link"/>
 									</span>
-									<a href="generic.html">
-										<h2>Ipsum</h2>
+									<a href="https://github.com/dimitriupe/responsive-web-design-I/tree/Petros-Demetriou" target="blank">
+										<h2>Responsive Web Design I:<br> Adaptive Website</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Created an adaptive version<br> of the "Great Idea Web Page".<br>Design mock ups created for desktop, tablet, and mobile devices.</p>
 										</div>
 									</a>
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="images/pic08.jpg" alt="" />
+										<img src="images/pic08.jpg" alt="Light Green image for Link" />
 									</span>
-									<a href="generic.html">
-										<h2>Dolor</h2>
+									<a href="https://github.com/dimitriupe/portfolio-website/tree/Petros-Demetriou" target="blank">
+										<h2>Portfolio Website</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>I had to create one.</p>
 										</div>
 									</a>
 								</article>
 								<article class="style1">
 									<span class="image">
-										<img src="images/pic09.jpg" alt="" />
+										<img src="images/pic09.jpg" alt="Pink1 image for Link" />
 									</span>
 									<a href="generic.html">
-										<h2>Nullam</h2>
+										<h2>Future project</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Will be soon posted.</p>
 										</div>
 									</a>
 								</article>
 								<article class="style5">
 									<span class="image">
-										<img src="images/pic10.jpg" alt="" />
+										<img src="images/pic10.jpg" alt="Purple1 image for Link" />
 									</span>
 									<a href="generic.html">
-										<h2>Ultricies</h2>
+										<h2>Future project</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Be patient. I will soon upload the link.</p>
 										</div>
 									</a>
 								</article>
 								<article class="style6">
 									<span class="image">
-										<img src="images/pic11.jpg" alt="" />
+										<img src="images/pic11.jpg" alt="Light Blue image for Link" />
 									</span>
 									<a href="generic.html">
-										<h2>Dictum</h2>
+										<h2>Future project</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Same here.</p>
 										</div>
 									</a>
 								</article>
 								<article class="style4">
 									<span class="image">
-										<img src="images/pic12.jpg" alt="" />
+										<img src="images/pic12.jpg" alt="Dark Purple image for Link" />
 									</span>
 									<a href="generic.html">
-										<h2>Pretium</h2>
+										<h2>Future project</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>And here.</p>
 										</div>
 									</a>
 								</article>
