--- a/project/generic.html
+++ b/project/generic.html
@@ -54,7 +54,7 @@
 							<p>My full name is Petros Demetriou. I live in Limassol, <a href="https://www.tripadvisor.com/Attractions-g190372-Activities-c61-t52-Cyprus.html" target="blank">Cyprus</a> and as you probably noticed from the picture above we have beautiful, magical beaches.<br>Cyprus is an island located in the eastern Mediterranean Sea and has amazing places to visit.</p>
 							<p>Three weeks ago, I began my journey at Lambda School and for the next 1,5 year my aim will be to acquire as much as possible tech skills and knowledge.<br>In this way, I will be in a better position to compete for a job within the tech industry. I had minor experience of coding in the past, mainly through learning C language which I was taught at high school. Othen than that my coding experience up to now has been limited.</p>
 							<p>But I took the big decision to change this. I am really fascinated by technology and I am on my way to make the big step and switch to a tech related job. Lambda School has been really influential in providing me with the necessary skills and knowledge as required by current recruiters of the tech industry.</p>
-							<p>I am currently a PT Full Stack Web Development student at Λ.<br>I will give my best to complete the curriculum and try to reach my maximum potential as a future Web Devloper.</p>
+							<p>I am currently a PT Full Stack Web Development student at Λ.<br>I will give my best to complete the curriculum and try to reach my maximum potential as a future Web Developer.</p>
 							<div class="profilepic"><img src="images/3.jpg" alt="Petro's profile picture" /></div>
 						</div>
 					</div>
